--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
     <script src="matter.js"></script>
-    <script src="box.js"></script>
-    <script src="Ground.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="player.js"></script>
+    <script src="ground.js"></script>
+    <script src="block.js"></script>
     <meta charset="utf-8">
 
   </head>
