--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="player.js"></script>
     <script src="ground.js"></script>
     <script src="block.js"></script>
+    <script src="anvil.js"></script>
     <meta charset="utf-8">
 
   </head>
